adaptive header for tablet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="main.js"></script>
 </head>
+
 <body>
     <header>
         <div class="header-up">
@@ -18,8 +20,8 @@
             </div>
             <div class="header-up__right">
                 <p class="text text-right">Доставляем товары из заграницы в Россию <br>
-                Стоимость от 550 рублей за заказ <br> 
-                1 $ = 93 ₽ | 1 € = 99 ₽ | 1 ¥ = 13 ₽</p>
+                    Стоимость от 550 рублей за заказ <br>
+                    1 $ = 93 ₽ | 1 € = 99 ₽ | 1 ¥ = 13 ₽</p>
                 <div class="header-up__right-phone">
                     <div class="header-up__right-phone--up">
                         <h1 class="text-4xl text-bold">+7 (800) 123 45-67</h1>
@@ -41,6 +43,12 @@
             </ul>
             <button class="btn text-basic text">Оставить заявку</button>
         </div>
+        <p class="text text-row">
+            <span>Доставляем товары <br> из заграницы в Россию</span>
+            <span>Стоимость от 550 рублей <br> за заказ</span>
+            <span>1 $ = 93 ₽ | 1 € = 99 ₽ | 1 ¥ = 13 ₽</span>
+        </p>
     </header>
 </body>
+
 </html>
