del-block start

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -49,6 +49,26 @@
             <span>1 $ = 93 ₽ | 1 € = 99 ₽ | 1 ¥ = 13 ₽</span>
         </p>
     </header>
+
+    <main>
+        <div class="delivery-container">
+            <div class="delivery-block__left">
+                <h1 class="text-4xl text-bold">
+                    Без проблемная доставка купленых вещей из США, Европы и Азии в Россию
+            </h1>
+                <p class="text text-xl">
+                    Сэкономьте на покупках и наслаждайтесь мировыми брендами — <br>
+                    наш сервис позволяет вам легко и удобно заказывать товары со всего <br>
+                    мира и получать их в России
+                </p>
+
+                <img src="./image/7a033eb536b79a868ca1af76a654b33ac20df44f.jpg">
+            </div>
+            <div class="delivery-block__right">
+                n
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
