--- a/index.html
+++ b/index.html
@@ -51,23 +51,46 @@
     </header>
 
     <main>
-        <div class="delivery-container">
-            <div class="delivery-block__left">
-                <h1 class="text-4xl text-bold">
-                    Без проблемная доставка купленых вещей из США, Европы и Азии в Россию
-            </h1>
-                <p class="text text-xl">
-                    Сэкономьте на покупках и наслаждайтесь мировыми брендами — <br>
-                    наш сервис позволяет вам легко и удобно заказывать товары со всего <br>
-                    мира и получать их в России
-                </p>
+        <section class="delivery">
+            <div class="delivery-container">
+                <div class="delivery-block__left">
+                    <h1 class="text-4xl text-bold">
+                        Без проблемная доставка купленых вещей из США, Европы и Азии в Россию
+                    </h1>
+                    <p class="text text-xl">
+                        Сэкономьте на покупках и наслаждайтесь мировыми брендами — <br>
+                        наш сервис позволяет вам легко и удобно заказывать товары со всего <br>
+                        мира и получать их в России
+                    </p>
 
-                <img src="./image/7a033eb536b79a868ca1af76a654b33ac20df44f.jpg">
+                    <img src="./image/7a033eb536b79a868ca1af76a654b33ac20df44f.jpg">
+                </div>
+                <div class="delivery-block__right">
+                    <div class="delivery-block__right--text">
+                        <h1 class="text-center text-3xl text-basic">Калькулятор доставки</h1>
+                        <p class="text text-center">Посчитайте, сколько будет стоить перевозка <br> покупки из зарубежа
+                        </p>
+                    </div>
+                    <form class="delivery-block__right-calc">
+                        <input type="text" placeholder="Имя">
+
+                        <input type="email" placeholder="Почта">
+                        <input type="tel" placeholder="Телефон">
+
+                        <input type="text" placeholder="Общая площадь, м²">
+                        <input type="text" placeholder="Вес, кг">
+
+                        <input type="text" placeholder="Страна покупки">
+                        <input type="text" placeholder="Город покупки">
+
+                        <input type="text" placeholder="Область доставки">
+                        <input type="text" placeholder="Город доставки">
+
+                        <button type="submit" class="btn text-bold">Заказать расчёт</button>
+                    </form>
+                </div>
             </div>
-            <div class="delivery-block__right">
-                n
-            </div>
-        </div>
+        </section>
     </main>
 </body>
 
