very smal optimize

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             <div class="delivery-container">
                 <div class="delivery-block__left">
                     <h1 class="text-4xl text-bold">
-                        Без проблемная доставка купленых вещей из США, Европы и Азии в Россию
+                        Без проблемная доставка купленных <br>
+                        вещей из США, Европы и Азии <br>
+                        в Россию
                     </h1>
                     <p class="text text-xl">
                         Сэкономьте на покупках и наслаждайтесь мировыми брендами — <br>
@@ -91,6 +93,33 @@
                 </div>
             </div>
         </section>
+
+        <section class="advantage">
+            <div class="advantage-container">
+                <h1 class="text-4xl text-bold text-center">Наши преимущества</h1>
+                <div class="advantage-blocks">
+                    <div class="advantage-block">
+                        <img src="./image/Shield.svg" class="advantage-block--img">
+                        <h2 class="text-2xl text-bold text-center">Гарантии безопасности</h2>
+                        <p class="text text-center">Мы обеспечиваем полную безопасность ваших покупок <br>
+                            на всех этапах доставки</p>
+                    </div>
+                    <div class="advantage-block">
+                        <img src="./image/Clock.svg" class="advantage-block--img">
+                        <h2 class="text-2xl text-bold text-center">Скорость доставки</h2>
+                        <p class="text text-center">Быстрая доставка из США, Европы и Азии в Россию <br>
+                            с минимальными сроками ожидания</p>
+                    </div>
+                    <div class="advantage-block">
+                        <img src="./image/PriceTag.svg" class="advantage-block--img">
+                        <h2 class="text-2xl text-bold text-center">Выгодные цены</h2>
+                        <p class="text text-center">Конкурентные цены на доставку и прозрачная система оплаты <br>
+                            без скрытых комиссий</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
