advantage add + small optimize

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header-up">
             <div class="header-up__left">
                 <div class="header-up__left--icon">
-                    <img src="./image/Vector.svg" class="header-up__left--img">
+                    <img src="./image/icon/Vector.svg" class="header-up__left--img">
                     <h1 class="text text-2xl text-bold">FromBoard Delivery</h1>
                 </div>
             </div>
@@ -95,28 +95,69 @@
         </section>
 
         <section class="advantage">
+            <h1 class="text text-3xl text-bold text-center">Наши преимущества</h1>
             <div class="advantage-container">
-                <h1 class="text-4xl text-bold text-center">Наши преимущества</h1>
-                <div class="advantage-blocks">
-                    <div class="advantage-block">
-                        <img src="./image/Shield.svg" class="advantage-block--img">
-                        <h2 class="text-2xl text-bold text-center">Гарантии безопасности</h2>
-                        <p class="text text-center">Мы обеспечиваем полную безопасность ваших покупок <br>
-                            на всех этапах доставки</p>
-                    </div>
-                    <div class="advantage-block">
-                        <img src="./image/Clock.svg" class="advantage-block--img">
-                        <h2 class="text-2xl text-bold text-center">Скорость доставки</h2>
-                        <p class="text text-center">Быстрая доставка из США, Европы и Азии в Россию <br>
-                            с минимальными сроками ожидания</p>
-                    </div>
-                    <div class="advantage-block">
-                        <img src="./image/PriceTag.svg" class="advantage-block--img">
-                        <h2 class="text-2xl text-bold text-center">Выгодные цены</h2>
-                        <p class="text text-center">Конкурентные цены на доставку и прозрачная система оплаты <br>
-                            без скрытых комиссий</p>
+
+                <div class="advantage-block">
+                    <img src="./image/icon/List.svg">
+                    <div class="advantage-block--text">
+                        <h1 class="text text-2xl text-bold">Растоможка груза</h1>
+                        <p class="text text-small">Мы берём на себя все формальности и бумажную волокиту, связанную
+                            с растаможкой груза
+                        </p>
                     </div>
                 </div>
+
+                <div class="advantage-block">
+                    <img src="./image/icon/Box.svg">
+                    <div class="advantage-block--text">
+                        <h1 class="text text-2xl text-bold">Надёжная упаковка</h1>
+                        <p class="text text-small">Все товары упаковываются нашими специалистами с особым вниманием
+                            к деталям, гарантируя, что они дойдут в безопасности и в отличном состоянии
+                        </p>
+                    </div>
+                </div>
+
+                <div class="advantage-block">
+                    <img src="./image/icon/Truck.svg">
+                    <div class="advantage-block--text">
+                        <h1 class="text text-2xl text-bold">Быстро и выгодно</h1>
+                        <p class="text text-small">Мы предлагаем быструю и выгодную доставку, чтобы вы могли насладиться
+                            покупками как можно скорее.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="advantage-block">
+                    <img src="./image/icon/medal.svg">
+                    <div class="advantage-block--text">
+                        <h1 class="text text-2xl text-bold">Удобный сервис</h1>
+                        <p class="text text-small">Стремимся сделать процесс доставки максимально удобным для вас, чтобы
+                            опыт остался приятным и беззаботным
+                        </p>
+                    </div>
+                </div>
+
+                <div class="advantage-block">
+                    <img src="./image/icon/Monitor.svg">
+                    <div class="advantage-block--text">
+                        <h1 class="text text-2xl text-bold">Прозрачность работы</h1>
+                        <p class="text text-small">Мы предоставляем полный контроль над каждым этапом доставки,
+                            от момента заказа до момента прибытия заказа
+                        </p>
+                    </div>
+                </div>
+
+                <div class="advantage-block">
+                    <img src="./image/icon/safe.svg">
+                    <div class="advantage-block--text">
+                        <h1 class="text text-2xl text-bold">Страхование груза</h1>
+                        <p class="text text-small">Наше страхование обеспечивает полную защиту и покрытие почти все
+                            неприятные и неожиданные ситуации
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </section>
 
