--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <input type="text" placeholder="Область доставки">
                         <input type="text" placeholder="Город доставки">
 
-                        <button type="submit" class="btn text-bold">Заказать расчёт</button>
+                        <button type="submit" class="btn text-bold text text-basic">Заказать расчёт</button>
                     </form>
                 </div>
             </div>
@@ -159,6 +159,38 @@
                 </div>
 
             </div>
+        </section>
+
+        <section class="guarantees">
+            <div class="guarantees--text">
+                <h1 class="text text-3xl text-bold text-center">Гарантии качества</h1>
+                <p class="text text-center">Наши гарантии качества включают в себя полный спектр документов, необходимых
+                    <br>
+                    для ввоза и вывоза товаров, а также для успешного бизнеса на мировом рынке. <br>
+                    Мы предоставляем вам надёжность и уверенность
+                </p>
+            </div>
+
+            <div class="guarantees--galary">
+                <div class="guarantees--block">
+                    <img src="./image/document/russia.png">
+                    <h1 class="text text-large text-bold text-center">Свидетельство о регистрации в РФ</h1>
+                </div>
+                <div class="guarantees--block">
+                    <img src="./image/document/usa.png">
+                    <h1 class="text text-large text-bold text-center">Свидетельство о регистрации в США</h1>
+                </div>
+                <div class="guarantees--block">
+                    <img src="./image/document/china.png">
+                    <h1 class="text text-large text-bold text-center">Свидетельство о регистрации в <br>Китае</h1>
+                </div>
+                <div class="guarantees--block">
+                    <img src="./image/document/uk.png">
+                    <h1 class="text text-large text-bold text-center">Свидетельство о регистрации в Великобритании</h1>
+                </div>
+            </div>
+
+            <button class="btn text text-basic">Показать больше документов</button>
         </section>
 
     </main>
