--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <p class="text-2xl text-light">Звонки по России бесплатны</p>
                     </div>
 
-                    <img src="./image/Burger.svg" class="burger">
+                    <img src="./image/icon/Burger.svg" class="burger">
                 </div>
             </div>
         </div>
@@ -98,9 +98,9 @@
             <h1 class="text text-3xl text-bold text-center">Наши преимущества</h1>
             <div class="advantage-container">
 
-                <div class="advantage-block">
+                <div class="advantage-container__block">
                     <img src="./image/icon/List.svg">
-                    <div class="advantage-block--text">
+                    <div class="advantage-container__block--text">
                         <h1 class="text text-2xl text-bold">Растоможка груза</h1>
                         <p class="text text-small">Мы берём на себя все формальности и бумажную волокиту, связанную
                             с растаможкой груза
@@ -108,9 +108,9 @@
                     </div>
                 </div>
 
-                <div class="advantage-block">
+                <div class="advantage-container__block">
                     <img src="./image/icon/Box.svg">
-                    <div class="advantage-block--text">
+                    <div class="advantage-container__block--text">
                         <h1 class="text text-2xl text-bold">Надёжная упаковка</h1>
                         <p class="text text-small">Все товары упаковываются нашими специалистами с особым вниманием
                             к деталям, гарантируя, что они дойдут в безопасности и в отличном состоянии
@@ -118,9 +118,9 @@
                     </div>
                 </div>
 
-                <div class="advantage-block">
+                <div class="advantage-container__block">
                     <img src="./image/icon/Truck.svg">
-                    <div class="advantage-block--text">
+                    <div class="advantage-container__block--text">
                         <h1 class="text text-2xl text-bold">Быстро и выгодно</h1>
                         <p class="text text-small">Мы предлагаем быструю и выгодную доставку, чтобы вы могли насладиться
                             покупками как можно скорее.
@@ -128,9 +128,9 @@
                     </div>
                 </div>
 
-                <div class="advantage-block">
+                <div class="advantage-container__block">
                     <img src="./image/icon/medal.svg">
-                    <div class="advantage-block--text">
+                    <div class="advantage-container__block--text">
                         <h1 class="text text-2xl text-bold">Удобный сервис</h1>
                         <p class="text text-small">Стремимся сделать процесс доставки максимально удобным для вас, чтобы
                             опыт остался приятным и беззаботным
@@ -138,9 +138,9 @@
                     </div>
                 </div>
 
-                <div class="advantage-block">
+                <div class="advantage-container__block">
                     <img src="./image/icon/Monitor.svg">
-                    <div class="advantage-block--text">
+                    <div class="advantage-container__block--text">
                         <h1 class="text text-2xl text-bold">Прозрачность работы</h1>
                         <p class="text text-small">Мы предоставляем полный контроль над каждым этапом доставки,
                             от момента заказа до момента прибытия заказа
@@ -148,9 +148,9 @@
                     </div>
                 </div>
 
-                <div class="advantage-block">
+                <div class="advantage-container__block">
                     <img src="./image/icon/safe.svg">
-                    <div class="advantage-block--text">
+                    <div class="advantage-container__block--text">
                         <h1 class="text text-2xl text-bold">Страхование груза</h1>
                         <p class="text text-small">Наше страхование обеспечивает полную защиту и покрытие почти все
                             неприятные и неожиданные ситуации
@@ -172,19 +172,19 @@
             </div>
 
             <div class="guarantees--galary">
-                <div class="guarantees--block">
+                <div class="guarantees--galary--block">
                     <img src="./image/document/russia.png">
                     <h1 class="text text-large text-bold text-center">Свидетельство о регистрации в РФ</h1>
                 </div>
-                <div class="guarantees--block">
+                <div class="guarantees--galary--block">
                     <img src="./image/document/usa.png">
                     <h1 class="text text-large text-bold text-center">Свидетельство о регистрации в США</h1>
                 </div>
-                <div class="guarantees--block">
+                <div class="guarantees--galary--block">
                     <img src="./image/document/china.png">
                     <h1 class="text text-large text-bold text-center">Свидетельство о регистрации в <br>Китае</h1>
                 </div>
-                <div class="guarantees--block">
+                <div class="guarantees--galary--block">
                     <img src="./image/document/uk.png">
                     <h1 class="text text-large text-bold text-center">Свидетельство о регистрации в Великобритании</h1>
                 </div>
@@ -193,6 +193,47 @@
             <button class="btn text text-basic">Показать больше документов</button>
         </section>
 
+        <section class="review">
+            <img src="./image/icon/switcher.svg">
+            <div class="review-container">
+
+                <h1 class="text-3xl text text-bold">Отзывы</h1>
+                <div class="review-container__quotes">
+                    <div class="review-container__quote">
+                        <p class="text text-2xl text-bold">
+                            Я заказала последний iPhone из США через ваш сервис, и доставка прошла быстро
+                            и без каких‑либо проблем. Гарантии качества и надёжная упаковка сделали мой опыт покупки
+                            невероятно позитивным
+                        </p>
+                        <img src="./image/icon/quote.svg">
+                        <p class="text text-2xl text-light">Анна</p>
+                    </div>
+
+                    <div class="review-container__quote">
+                        <p class="text text-2xl text-bold">
+                            Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда
+                            меня не подводил. Важно иметь надёжную компанию, которая позаботится о вашем заказе
+                            и предоставит все необходимые документы для ввоза в Россию
+                        </p>
+                        <img src="./image/icon/quote.svg">
+                        <p class="text text-2xl text-light">Анна</p>
+                    </div>
+                </div>
+            </div>
+            <img src="./image/icon/switcher.svg">
+        </section>
+
+        <section class="contact">
+            <h1>Остались вопросы?</h1>
+            <div class="contact-container">
+                <input type="text" placeholder="Имя">
+                <input type="email" placeholder="Почта">
+                <input type="tel" placeholder="Телефон">
+                <input type="text" placeholder="Тема вопроса">
+                <textarea placeholder="Сообщение..."></textarea>
+            </div>
+            <button class="btn">Отправить заявку</button>
+        </section>
     </main>
 </body>
 
