--- a/index.html
+++ b/index.html
@@ -235,6 +235,32 @@
             <button class="btn">Отправить заявку</button>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-up">
+            <div class="footer-up__left">
+                <div class="footer-up__left--icon">
+                    <img src="./image/icon/Vector.svg" class="header-up__left--img">
+                    <h1 class="text text-2xl text-bold">FromBoard Delivery</h1>
+                </div>
+                <p class="text-xs">2023 © Ни одно право не защищено, копируйте сколько влезет <span><img
+                            src="./image/Vector.svg"></span></p>
+            </div>
+            <div class="footer-up__center">
+                <ul class="header-down__menu--left">
+                    <li class="text text-basic">Калькулятор</li>
+                    <li class="text text-basic">О нас</li>
+                    <li class="text text-basic">Гарантии</li>
+                    <li class="text text-basic">Отзывы</li>
+                </ul>
+            </div>
+            <div class="footer-up__right">test</div>
+        </div>
+        <div class="footer-down">
+            <div class="test">test</div>
+            <div class="test">test</div>
+        </div>
+    </footer>
 </body>
 
 </html>
