--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="delivery-container">
                 <div class="delivery-block__left">
                     <h1 class="text-4xl text-bold">
-                        Без проблемная доставка купленных <br>
+                        Без проблемная доставка купленых <br>
                         вещей из США, Европы и Азии <br>
                         в Россию
                     </h1>
@@ -216,7 +216,7 @@
                             и предоставит все необходимые документы для ввоза в Россию
                         </p>
                         <img src="./image/icon/quote.svg">
-                        <p class="text text-2xl text-light">Анна</p>
+                        <p class="text text-2xl text-light">Алексей</p>
                     </div>
                 </div>
             </div>
@@ -254,11 +254,26 @@
                     <li class="text text-basic">Отзывы</li>
                 </ul>
             </div>
-            <div class="footer-up__right">test</div>
+            <div class="footer-up__right">
+                <div class="footer-up__right-phone">
+                    <div class="footer-up__right-phone--up">
+                        <h1 class="text-4xl text-bold">+7 (800) 123 45-67</h1>
+                    </div>
+                    <div class="footer-up__right-phone-down">
+                        <p class="text-2xl text-light text-justify">Звонки по России бесплатны</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="footer-down">
-            <div class="test">test</div>
-            <div class="test">test</div>
+            <div class="footer-down--text__left">
+                <p>
+                    НЕ ЯВЛЯЕТСЯ ПУБЛИЧНОЙ ОФЕРТОЙ. Просим обратить внимание на то, что цены носят информационный и ознакомительный характер, а значит ни в какой мере не являются публичной <br>
+                    офертой, которая определена в ст. 437 ГК РФ. Вся информация на сайте может содержать неточности, орфографические и иные ошибки, она не является полной, окончательно и исчерпывающей</p>
+            </div>
+            <div class="test">
+                Разработкой макета занимался <br>
+                Васильев Александр | Что-то на IT’шном</div>
         </div>
     </footer>
 </body>
