--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="header-up__right">
-                <p class="text text-right">Доставляем товары из заграницы в Россию <br>
+                <p class="text text-right text-divider">Доставляем товары из заграницы в Россию <br>
                     Стоимость от 550 рублей за заказ <br>
                     1 $ = 93 ₽ | 1 € = 99 ₽ | 1 ¥ = 13 ₽</p>
                 <div class="header-up__right-phone">
@@ -55,7 +55,7 @@
             <div class="delivery-container">
                 <div class="delivery-block__left">
                     <h1 class="text-4xl text-bold">
-                        Без проблемная доставка купленых <br>
+                        Без проблемная доставка купленных <br>
                         вещей из США, Европы и Азии <br>
                         в Россию
                     </h1>
@@ -267,13 +267,18 @@
         </div>
         <div class="footer-down">
             <div class="footer-down--text__left">
-                <p>
-                    НЕ ЯВЛЯЕТСЯ ПУБЛИЧНОЙ ОФЕРТОЙ. Просим обратить внимание на то, что цены носят информационный и ознакомительный характер, а значит ни в какой мере не являются публичной <br>
-                    офертой, которая определена в ст. 437 ГК РФ. Вся информация на сайте может содержать неточности, орфографические и иные ошибки, она не является полной, окончательно и исчерпывающей</p>
+                <p class="text-xs text-light">
+                    НЕ ЯВЛЯЕТСЯ ПУБЛИЧНОЙ ОФЕРТОЙ. Просим обратить внимание на то, что цены носят информационный
+                    и ознакомительный характер, а значит ни в какой мере не являются публичной <br>
+                    офертой, которая определена в ст. 437 ГК РФ. Вся информация на сайте может содержать неточности,
+                    орфографические и иные ошибки, она не является полной, окончательно и исчерпывающей</p>
             </div>
-            <div class="test">
-                Разработкой макета занимался <br>
-                Васильев Александр | Что-то на IT’шном</div>
+            <div class="footer-down--text__right">
+                <p class="text text-xs text-right">
+                    Разработкой макета занимался <br>
+                    <span>Васильев Александр | Что-то на IT’шном</span>
+                </p>
+            </div>
         </div>
     </footer>
 </body>
