--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <h1 class="text-4xl text-bold">+7 (800) 123 45-67</h1>
                     </div>
                     <div class="header-up__right-phone-down">
-                        <p class="text-2xl text-light">Звонки по России бесплатны</p>
+                        <p class="text-2xl text-light text-justify">Звонки по России бесплатны</p>
                     </div>
 
                     <img src="./image/icon/Burger.svg" class="burger">
@@ -54,17 +54,18 @@
         <section class="delivery">
             <div class="delivery-container">
                 <div class="delivery-block__left">
+                    <div class="delivery-block__left--text">
                     <h1 class="text-4xl text-bold">
-                        Без проблемная доставка купленных <br>
-                        вещей из США, Европы и Азии <br>
+                        Без проблемная доставка купленых 
+                        вещей из США, Европы и Азии 
                         в Россию
                     </h1>
                     <p class="text text-xl">
-                        Сэкономьте на покупках и наслаждайтесь мировыми брендами — <br>
-                        наш сервис позволяет вам легко и удобно заказывать товары со всего <br>
+                        Сэкономьте на покупках и наслаждайтесь мировыми брендами —
+                        наш сервис позволяет вам легко и удобно заказывать товары со всего
                         мира и получать их в России
                     </p>
-
+                    </div>
                     <img src="./image/7a033eb536b79a868ca1af76a654b33ac20df44f.jpg">
                 </div>
                 <div class="delivery-block__right">
@@ -224,7 +225,7 @@
         </section>
 
         <section class="contact">
-            <h1>Остались вопросы?</h1>
+            <h1 class="text-3xl text-bold">Остались вопросы?</h1>
             <div class="contact-container">
                 <input type="text" placeholder="Имя">
                 <input type="email" placeholder="Почта">
@@ -243,7 +244,8 @@
                     <img src="./image/icon/Vector.svg" class="header-up__left--img">
                     <h1 class="text text-2xl text-bold">FromBoard Delivery</h1>
                 </div>
-                <p class="text-xs">2023 © Ни одно право не защищено, копируйте сколько влезет <span><img
+                <p class="text-xs">
+                    2023 © Ни одно право не защищено, копируйте сколько влезет <span><img
                             src="./image/Vector.svg"></span></p>
             </div>
             <div class="footer-up__center">
