yeeeeeeeeeeey!!!! complete adaptive for 1536px

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div class="footer-down--text__left">
                 <p class="text-xs text-light">
                     НЕ ЯВЛЯЕТСЯ ПУБЛИЧНОЙ ОФЕРТОЙ. Просим обратить внимание на то, что цены носят информационный
-                    и ознакомительный характер, а значит ни в какой мере не являются публичной <br>
+                    и ознакомительный характер, а значит ни в какой мере не являются публичной
                     офертой, которая определена в ст. 437 ГК РФ. Вся информация на сайте может содержать неточности,
                     орфографические и иные ошибки, она не является полной, окончательно и исчерпывающей</p>
             </div>
