final adaptive for 1024px!!! yey

--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
             <div class="delivery-container">
                 <div class="delivery-block__left">
                     <div class="delivery-block__left--text">
-                    <h1 class="text-4xl text-bold">
-                        Без проблемная доставка купленых 
-                        вещей из США, Европы и Азии 
-                        в Россию
-                    </h1>
-                    <p class="text text-xl">
-                        Сэкономьте на покупках и наслаждайтесь мировыми брендами —
-                        наш сервис позволяет вам легко и удобно заказывать товары со всего
-                        мира и получать их в России
-                    </p>
+                        <h1 class="text-4xl text-bold">
+                            Без проблемная доставка купленых
+                            вещей из США, Европы и Азии
+                            в Россию
+                        </h1>
+                        <p class="text text-xl">
+                            Сэкономьте на покупках и наслаждайтесь мировыми брендами —
+                            наш сервис позволяет вам легко и удобно заказывать товары со всего
+                            мира и получать их в России
+                        </p>
                     </div>
                     <img src="./image/7a033eb536b79a868ca1af76a654b33ac20df44f.jpg">
                 </div>
@@ -238,6 +238,14 @@
     </main>
 
     <footer>
+        <div class="footer-up__center--mobile">
+            <ul class="header-down__menu--left">
+                <li class="text text-basic">Калькулятор</li>
+                <li class="text text-basic">О нас</li>
+                <li class="text text-basic">Гарантии</li>
+                <li class="text text-basic">Отзывы</li>
+            </ul>
+        </div>
         <div class="footer-up">
             <div class="footer-up__left">
                 <div class="footer-up__left--icon">
@@ -277,7 +285,7 @@
             </div>
             <div class="footer-down--text__right">
                 <p class="text text-xs text-right">
-                    Разработкой макета занимался <br>
+                    Разработкой макета занимался
                     <span>Васильев Александр | Что-то на IT’шном</span>
                 </p>
             </div>
