THIS IS FINAL ADAPTIVE

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <input type="text" placeholder="Тема вопроса">
                 <textarea placeholder="Сообщение..."></textarea>
             </div>
-            <button class="btn">Отправить заявку</button>
+            <button class="btn text-bold">Отправить заявку</button>
         </section>
     </main>
 
